<resources>
    <string name="app_name">screentrackr</string>
    <string name="dont_have_an_account_yet_sign_up_now">Don\'t have an account yet? Sign up now</string>
    <string name="login_button">Login</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="screentrackr_logo">screentrackr</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string-array name="relation_types">
        <item>watching</item>
        <item>cancelled</item>
        <item>watched</item>
        <item>watchlist</item>
    </string-array>
</resources>