<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignupActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/errorBackground"
        android:padding="16dp"
        android:textColor="@color/errorText"
        android:visibility="gone"
        android:gravity="center"
        android:text="Registration Error"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/error_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/screentrackr_logo"
        android:src="@drawable/screentrackr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:padding="10dp"
            android:textColor="@color/brightest_color"
            android:textColorHint="@color/placeholder_color"
            android:layout_marginTop="10dp"
            android:minWidth="280dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:padding="10dp"
            android:textColor="@color/brightest_color"
            android:textColorHint="@color/placeholder_color"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:padding="10dp"
            android:textColor="@color/brightest_color"
            android:textColorHint="@color/placeholder_color"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:textColor="@color/brightest_color"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register_button" />

        <TextView
            android:id="@+id/signin_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account_sign_in"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>
